Adicionada a propriedade alt nas imagens dos index.html dos Code Parks

--- a/Code Park 16.11/index.html
+++ b/Code Park 16.11/index.html
@@ -32,11 +32,11 @@
                  <!-- Tag de texto responsável por criar um parágrafo de texto na página. -->
                  <p>Brasil</p>
                  <!-- Tag de imagem responsável por incluir imagens na página. -->
-                 <img src="img/logo-br.png" width="250px" height="350px">
+                 <img src="img/logo-br.png" width="250px" height="350px" alt="Imagem do Escudo da Seleção Brasileira">
              </div>
              <div class="srDiv">
                  <p>Sérvia</p>
-                 <img src="img/logo-sr.png" width="250px" height="350px">
+                 <img src="img/logo-sr.png" width="250px" height="350px" alt="Imagem do Escudo da Seleção Sérvia">
              </div>
          </main>
          <footer>
