--- a/Code Park 21.11/index.html
+++ b/Code Park 21.11/index.html
@@ -28,7 +28,7 @@
     <main>
         <h1>Bem-vindo a EuroTour</h1>
         <section>
-            <img src="assets/europe-banner.png" width="100%" height="75%">
+            <img src="assets/europe-banner.png" width="100%" height="75%" alt="Banner com Pontos Turísticos Europeus">
             <h2>Sobre nós</h2>
             <p>EuroTour é um site que ajuda você a planejar sua viagem para a Europa, desde a compra das passagens, 
                 até a visita aos pontos turísticos mais importantes de cada região!</p>
@@ -36,22 +36,22 @@
         <section class="destinos">
             <h2>Confira alguns de nossos destinos:</h2>
             <h2>Paris</h2>
-            <img src="assets/paris.jpg" width="50%" height="40%">
+            <img src="assets/paris.jpg" width="50%" height="40%" alt="Imagem da Torre Eiffel e Museu do Louvre em Paris">
             <p>Paris, a capital da França, é uma importante cidade europeia e um centro mundial de arte, moda, gastronomia e cultura. 
                 Sua paisagem urbana do século XIX é cortada por avenidas largas e pelo rio Sena. 
                 A cidade é conhecida por monumentos como a Torre Eiffel e o Museu do Louvre</p>
             <h2>Santorini</h2>
-            <img src="assets/santorini.webp" width="50%" height="40%">
+            <img src="assets/santorini.webp" width="50%" height="40%" alt="Imagem da Ilha de Santorini na Grécia">
             <p>Santorini, na Grécia, está entre os mais charmosos destinos da Europa e a ilha é parada quase obrigatória de quem visita o país pela primeira vez. 
                 Famosa pelo visual cercado de casinhas brancas pontuadas por igrejas de domos azuis, Santorini encanta pelo cenário dramático formado por rochas vulcânicas em meio ao azul intenso do mar Egeu. 
                 Romântica e incrivelmente fotogênica, a Ilha de Santorini quase sempre faz parte dos roteiros de quem viaja pela Grécia.</p>
             <h2>Roma</h2>
-            <img src="assets/roma.jpg" width="50%" height="40%">
+            <img src="assets/roma.jpg" width="50%" height="40%" alt="Imagem do Coliseu e Basílica de São Pedro em Roma">
             <p>Roma, a capital da Itália, é uma cidade cosmopolita, enorme, com quase 3.000 anos de arte, arquitetura e cultura influentes no mundo todo. 
                 Ruínas antigas como o Coliseu evocam o poder do antigo Império Romano. Além da Cidade do Vaticano, sede da Igreja Católica Romana, que tem a Basílica de São Pedro e 
                 os museus do Vaticano, que abrigam obras-primas como os afrescos da Capela Sistina de Michelângelo.</p>
             <h2>Copenhague</h2>
-            <img src="assets/copenhague.jpg" width="50%" height="40%">
+            <img src="assets/copenhague.jpg" width="50%" height="40%" alt="Imagem de Nyhavn em Copenhague">
             <p>Copenhague, a capital e maior cidade da Dinamarca. A cidade é uma verdadeira meca cultural apresentando tudo o que você possa imaginar. 
                 Inclusive, ela é conhecida como uma das cidades com a melhor qualidade de vida. Tem como um dos destaques Nyhavn também é chamado de “o mais longo bar ao ar livre na Escandinávia“. 
                 Pois seus muitos restaurantes e cafés acolhedores são ótimos para comer com vista para o canal.</p>
