--- a/Code Park 30.11/index.html
+++ b/Code Park 30.11/index.html
@@ -1,56 +1,54 @@
-<!-- Com a página sobre o Marco Zero feita, é necessário de uma outra página e de um link que leve até ela. 
-    Na nova página, fale sobre dois outros pontos turísticos do Recife Antigo e siga os pré-requisitos a seguir: 
-
- 1. crie um link que irá direcionar para essa nova página; 
- 2. adicione imagens sobre os lugares.  -->
+<!-- Agora que já aprendeu as propriedades básicas da CSS, é possível aprimorar a atividade anterior aplicando 
+    estilos para a página que você já criou.  -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Park 23/11 - Parte 2</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Code Park 30/11</title>
 </head>
-<body>
+<body class="body_container">
     <header>
-        <h1>Recife - Marco Zero</h1>
-        <img src="assets/banner-marcozero.jpg" width="100%" height="10%" alt="Banner do Marco Zero no Recife">
+        <h1 class="header_title">Recife - Marco Zero</h1>
+        <img src="assets/banner-marcozero.jpg" class="header_banner" alt="Banner do Marco Zero no Recife">
     </header>
     <main>
-        <section>
-            <h2>O que é</h2>
-            <p>Conhecida pelo seu nome popular – Praça do Marco Zero, na verdade, é um apelido – o local se chama Praça Barão do Rio Branco e está localizada no Bairro do Recife, o Centro Histórico da cidade, que também atende por outra alcunha, mais popular: Recife Antigo. 
+        <section class="mainsec_container">
+            <h2 class="mainsec_title">O que é</h2>
+            <p class="mainsec_text">Conhecida pelo seu nome popular – Praça do Marco Zero, na verdade, é um apelido – o local se chama Praça Barão do Rio Branco e está localizada no Bairro do Recife, o Centro Histórico da cidade, que também atende por outra alcunha, mais popular: Recife Antigo. 
                 Além de dar o nome oficial à praça, o Barão do Rio Branco também está representado no local por uma estátua em bronze de 2,80m de altura, feita pelo escultor francês Félix Charpentier.
                 Local de fundação da cidade do Recife e também como ponto inicial de contagem das distâncias calculadas a partir da cidade. 
                 O lugar é um dos pontos mais importantes na capital Pernambucana, pois é também uma região de forte movimento durante o Carnaval. 
             </p>
-            <img src="assets/barao-riobranco.jpg" width="30%" height="5%" alt="Estátua do Barão de Rio Branco">
+            <img src="assets/barao-riobranco.jpg" class="mainsec_img" alt="Estátua do Barão de Rio Branco">
         </section>
-        <section>
-            <h2>Os 2 marcos</h2>
-            <p>O nome de Praça do Marco Zero se popularizou por conta da instalação, em 31 de janeiro de 1938, do Marco Zero de Recife, doado à cidade pelo Automóvel Clube de Pernambuco. 
+        <section class="mainsec_container">
+            <h2 class="mainsec_title">Os 2 marcos</h2>
+            <p class="mainsec_text">O nome de Praça do Marco Zero se popularizou por conta da instalação, em 31 de janeiro de 1938, do Marco Zero de Recife, doado à cidade pelo Automóvel Clube de Pernambuco. 
                 Essa versão antiga, foi substítuida em 2000, pela placa redonda posicionada na praça simbolizando o centro geográfico de onde partem as medições para todas as estradas de Pernambuco.</p>
-            <img src="assets/marco-antigo.webp" width="30%" height="5%" alt="Marco Zero Antigo">
-            <img src="assets/marco-novo.webp" width="68%" height="5%" alt="Marco Zero Novo">
+            <img src="assets/marco-antigo.webp" class="mainsec_img_dupla" alt="Marco Zero Antigo">
+            <img src="assets/marco-novo.webp" class="mainsec_img_dupla" alt="Marco Zero Novo">
         </section>
-        <section>
-            <h4>Outros pontos turísticos</h4>
-            <p>Para conhecer sobre outros 2 pontos turísticos do Recife Antigo <a href="pontos.html" target="_self">Clique Aqui!</a></p>
+        <section class="mainsec_container">
+            <h4 class="mainsec_title">Outros pontos turísticos</h4>
+            <p class="mainsec_text">Para conhecer sobre outros 2 pontos turísticos do Recife Antigo <a href="pontos.html" target="_self">Clique Aqui!</a></p>
         </section>
     </main>
-    <footer>
-        <h4>Conheça mais sobre o Recife Antigo</h4>
+    <footer class="footer_container">
+        <h4 class="footer_title">Conheça mais sobre o Recife Antigo</h4>
         <ul>
-            <li><a href="https://www.tripadvisor.com.br/Attraction_Review-g304560-d2359530-Reviews-Recife_Antigo-Recife_State_of_Pernambuco.html" target="_blank">
+            <li class="footer_links"><a href="https://www.tripadvisor.com.br/Attraction_Review-g304560-d2359530-Reviews-Recife_Antigo-Recife_State_of_Pernambuco.html" target="_blank">
                 Principais atrações segundo o TripAdvisor
             </a></li>
-            <li><a href="https://www.google.com/maps/dir//Pra%C3%A7a+Rio+Branco+-+Recife,+PE,+50030-230/@-8.0617353,-34.872876,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x7ab18a48f26183d:0x6a9ebfb27ba8f98d!2m2!1d-34.8706873!2d-8.0617353!3e0" target="_blank">
+            <li class="footer_links"><a href="https://www.google.com/maps/dir//Pra%C3%A7a+Rio+Branco+-+Recife,+PE,+50030-230/@-8.0617353,-34.872876,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x7ab18a48f26183d:0x6a9ebfb27ba8f98d!2m2!1d-34.8706873!2d-8.0617353!3e0" target="_blank">
                 Como chegar no Marco Zero
             </a></li>
-            <li><a href="https://www.google.com/maps/dir//Parque+das+Esculturas+Francisco+Brennand,+Recife+-+PE,+50740-970/@-8.0639427,-34.8713194,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x7ab18a43f0410bd:0x454cb7e8f13d5736!2m2!1d-34.8691307!2d-8.0639427!3e0" target="_blank">
+            <li class="footer_links"><a href="https://www.google.com/maps/dir//Parque+das+Esculturas+Francisco+Brennand,+Recife+-+PE,+50740-970/@-8.0639427,-34.8713194,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x7ab18a43f0410bd:0x454cb7e8f13d5736!2m2!1d-34.8691307!2d-8.0639427!3e0" target="_blank">
                 Como chegar no Parque das Esculturas Francisco Brennand
             </a></li>
-            <li><a href="https://www.google.com/maps/dir//Centro+Cultural+Cais+do+Sert%C3%A3o+-+Armazen+10,+Av.+Alfredo+Lisboa,+s%2Fn+-+Recife,+PE,+50030-150/@-8.0603021,-34.872188,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x7ab18a24fe6ec27:0xbf67f7d56acfbd5d!2m2!1d-34.8699993!2d-8.0603021!3e0" target="_blank">
+            <li class="footer_links"><a href="https://www.google.com/maps/dir//Centro+Cultural+Cais+do+Sert%C3%A3o+-+Armazen+10,+Av.+Alfredo+Lisboa,+s%2Fn+-+Recife,+PE,+50030-150/@-8.0603021,-34.872188,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x7ab18a24fe6ec27:0xbf67f7d56acfbd5d!2m2!1d-34.8699993!2d-8.0603021!3e0" target="_blank">
                 Como chegar no Museu Cais do Sertão
             </a></li>
         </ul>
