--- a/Code Park 02.12/index.html
+++ b/Code Park 02.12/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Code Park 30/11</title>
+    <title>Code Park 02/12</title>
 </head>
 <body class="body_container">
     <header>
@@ -17,19 +17,23 @@
     <main>
         <section class="mainsec_container">
             <h2 class="mainsec_title">O que é</h2>
-            <p class="mainsec_text">Conhecida pelo seu nome popular – Praça do Marco Zero, na verdade, é um apelido – o local se chama Praça Barão do Rio Branco e está localizada no Bairro do Recife, o Centro Histórico da cidade, que também atende por outra alcunha, mais popular: Recife Antigo. 
-                Além de dar o nome oficial à praça, o Barão do Rio Branco também está representado no local por uma estátua em bronze de 2,80m de altura, feita pelo escultor francês Félix Charpentier.
-                Local de fundação da cidade do Recife e também como ponto inicial de contagem das distâncias calculadas a partir da cidade. 
-                O lugar é um dos pontos mais importantes na capital Pernambucana, pois é também uma região de forte movimento durante o Carnaval. 
-            </p>
-            <img src="assets/barao-riobranco.jpg" class="mainsec_img" alt="Estátua do Barão de Rio Branco">
+            <div class="mainsec_flexbox">
+                <p class="mainsec_text">Conhecida pelo seu nome popular – Praça do Marco Zero, na verdade, é um apelido – o local se chama Praça Barão do Rio Branco e está localizada no Bairro do Recife, o Centro Histórico da cidade, que também atende por outra alcunha, mais popular: Recife Antigo. 
+                    Além de dar o nome oficial à praça, o Barão do Rio Branco também está representado no local por uma estátua em bronze de 2,80m de altura, feita pelo escultor francês Félix Charpentier.
+                    Local de fundação da cidade do Recife e também como ponto inicial de contagem das distâncias calculadas a partir da cidade. 
+                    O lugar é um dos pontos mais importantes na capital Pernambucana, pois é também uma região de forte movimento durante o Carnaval. 
+                </p>
+                <img src="assets/barao-riobranco.jpg" class="mainsec_img" alt="Estátua do Barão de Rio Branco">
+            </div>
         </section>
         <section class="mainsec_container">
             <h2 class="mainsec_title">Os 2 marcos</h2>
-            <p class="mainsec_text">O nome de Praça do Marco Zero se popularizou por conta da instalação, em 31 de janeiro de 1938, do Marco Zero de Recife, doado à cidade pelo Automóvel Clube de Pernambuco. 
-                Essa versão antiga, foi substítuida em 2000, pela placa redonda posicionada na praça simbolizando o centro geográfico de onde partem as medições para todas as estradas de Pernambuco.</p>
-            <img src="assets/marco-antigo.webp" class="mainsec_img_dupla" alt="Marco Zero Antigo">
-            <img src="assets/marco-novo.webp" class="mainsec_img_dupla" alt="Marco Zero Novo">
+            <div class="mainsec_flexbox">
+                <p class="mainsec_text">O nome de Praça do Marco Zero se popularizou por conta da instalação, em 31 de janeiro de 1938, do Marco Zero de Recife, doado à cidade pelo Automóvel Clube de Pernambuco. 
+                    Essa versão antiga, foi substítuida em 2000, pela placa redonda posicionada na praça simbolizando o centro geográfico de onde partem as medições para todas as estradas de Pernambuco.</p>
+                <img src="assets/marco-antigo.webp" class="mainsec_img_dupla" alt="Marco Zero Antigo">
+                <img src="assets/marco-novo.webp" class="mainsec_img_dupla" alt="Marco Zero Novo">
+            </div>
         </section>
         <section class="mainsec_container">
             <h4 class="mainsec_title">Outros pontos turísticos</h4>
