--- a/Code Park 02.12/pontos.html
+++ b/Code Park 02.12/pontos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Code Park 30/11</title>
+    <title>Code Park 02/12</title>
 </head>
 <body class="body_container">
     <header>
@@ -15,18 +15,22 @@
     <main>
         <section class="mainsec_container">
             <h2 class="mainsec_title">Parque das Esculturas Francisco Brennand</h2>
-            <p class="mainsec_text">O Parque de Esculturas é composto por obras do artista plástico Francisco Brennand, e foi inaugurado como comemoração dos 500 anos de descobrimento do Brasil. 
-                Foi instalado sobre o molhe do porto. Tartarugas, pelicanos, ovos, maçarico, pássaros roca e sentinela guardam a principal obra do parque, a torre de cristal, inspirada em uma flor descoberta pelo paisagista Roberto Burle Marx. 
-                A travessia do Marco Zero até o parque funciona diariamente, das 7h às 17h. 
-            </p>
-            <img src="assets/parque-brennand.jpg" class="mainsec_img" alt="Esculturas do Parque Francisco Brennand no Recife">
+            <div class="mainsec_flexbox">
+                <p class="mainsec_text">O Parque de Esculturas é composto por obras do artista plástico Francisco Brennand, e foi inaugurado como comemoração dos 500 anos de descobrimento do Brasil. 
+                    Foi instalado sobre o molhe do porto. Tartarugas, pelicanos, ovos, maçarico, pássaros roca e sentinela guardam a principal obra do parque, a torre de cristal, inspirada em uma flor descoberta pelo paisagista Roberto Burle Marx. 
+                    A travessia do Marco Zero até o parque funciona diariamente, das 7h às 17h. 
+                </p>
+                <img src="assets/parque-brennand.jpg" class="mainsec_img" alt="Esculturas do Parque Francisco Brennand no Recife">
+            </div>
         </section>
         <section class="mainsec_container">
             <h2 class="mainsec_title">Museu Cais do Sertão</h2>
-            <p class="mainsec_text">Construído no local de antigos armazéns do Porto do Recife, o Cais do Sertão oferece aos visitantes exposições temporárias e acervo permanente, com referências à cultura sertaneja da região Nordeste, com experiências sensoriais e arquitetura inovadora, em edificação que exprime em seus traços a união do litoral com o sertão.
-                Os horários de funcionamento serão reduzidos: 10h às 16h dias de quinta e sexta e 11h às 17h aos sábados, domingos e feriados.
-            </p>
-            <img src="assets/museu-cais.jpg" class="mainsec_img" alt="Interior do Museu Cais do Sertão no Recife">        
+            <div class="mainsec_flexbox">
+                <p class="mainsec_text">Construído no local de antigos armazéns do Porto do Recife, o Cais do Sertão oferece aos visitantes exposições temporárias e acervo permanente, com referências à cultura sertaneja da região Nordeste, com experiências sensoriais e arquitetura inovadora, em edificação que exprime em seus traços a união do litoral com o sertão.
+                    Os horários de funcionamento serão reduzidos: 10h às 16h dias de quinta e sexta e 11h às 17h aos sábados, domingos e feriados.
+                </p>
+                <img src="assets/museu-cais.jpg" class="mainsec_img" alt="Interior do Museu Cais do Sertão no Recife">        
+            </div>
         </section>
         <section class="mainsec_container">
             <h4 class="mainsec_title">Recife - Marco Zero</h4>
